...
      selected: selected,
      label: label,
      excludeSemantics: true,
      child: Center(
        heightFactor: 1,
        child: Material(
          key: const ValueKey('primary-create-button'),
          color: colors.primary,
          shape: CircleBorder(
            side: selected
                ? BorderSide(color: colors.primaryContainer, width: 3)
                : BorderSide.none,
          ),
...
